tests/sksl/errors/BitShiftFloat.dsl.glsl
### Compilation failed:

error: type mismatch: '>>=' cannot operate on 'float', 'int'

error: type mismatch: '<<=' cannot operate on 'float', 'int'

error: type mismatch: '&=' cannot operate on 'float', 'int'

error: type mismatch: '|=' cannot operate on 'float', 'int'

error: type mismatch: '^=' cannot operate on 'float', 'int'

error: type mismatch: '>>' cannot operate on 'float', 'int'

error: type mismatch: '<<' cannot operate on 'float', 'int'

error: type mismatch: '&' cannot operate on 'float', 'int'

error: type mismatch: '|' cannot operate on 'float', 'int'

error: type mismatch: '^' cannot operate on 'float', 'int'

10 errors
